tests/Error/ErrorCollector/ErrorCollectorSource/NotPsr2Class.php.inc
<?php

namespace Symplify\EasyCodingStandard\Tests\Error\ErrorDataCollectorSource;

abstract class SomeClass
{
    public function test()
    {
        $this->assertEquals('', '');
        // $this->assertEquals('', '');
        // $this->assertEquals('', '');
        // $this->assertEquals('', '');
        // $this->assertEquals('', '');
    }
}
